# hime

./: .clang-format  .gitignore  AUTHORS  ChangeLog  Changelog.html  Makefile  Makefile.am  README  README.html  README.md  VERSION.hime  about.cpp  cache.cpp  cin2gtab.cpp  config.mak  configure  configure.ac  eggtrayicon.cpp  eggtrayicon.h  eve.cpp  fullchar.cpp  gen-deb  gst.h  gtab-buf.cpp  gtab-buf.h  gtab-dbg.cpp  gtab-init.cpp  gtab-list.cpp  gtab-list.h  gtab-tsin-fname.cpp  gtab-use-count.cpp  gtab-util.cpp  gtab.cpp  gtab.h  gtab2cin.cpp  gtk_bug_fix.c  hime-common.cpp  hime-conf.cpp  hime-conf.h  hime-crypt.cpp  (+86 more)
.github/actions/almalinux/: action.yaml
.github/actions/archlinux/: action.yaml
.github/actions/centos7/: action.yaml
.github/actions/centos8/: action.yaml
.github/actions/debian/: action.yaml
.github/workflows/: build.yaml  codeql-analysis.yml
IMdkit/: Makefile
data/: Makefile  Makefile.am  NewCJ3.cin  ar30-big.cin  ar30.cin  array40.cin  cj-punc.cin  cj.cin  cj5.cin  cj543.cin  colemak.kbmsrc  dayi3.cin  dvorak.kbmsrc  esperanto.cin  et.kbmsrc  et26.kbmsrc  extr1.c  greek.cin  gtab.list  gtab.list.in  hangul-roman.cin  hangul.cin  hsu.kbmsrc  ibm.kbmsrc  jyutping.cin  korean.cin  latin-letters.cin  mitac.kbmsrc  pho-huge.tab2.src  pho.tab2.src  phrase-ctrl.table  phrase.table  pin-juyin.src  pinyin-no-tone.kbmsrc  pinyin.cin  pinyin.kbmsrc  russian.cin  s-pho-huge.tab2.src  s-pho.tab2.src  s-tsin.src  (+9 more)
distro/almalinux/ci/: Dockerfile  entrypoint.sh
distro/arch/: PKGBUILD  qt4-lib64.patch
distro/archlinux/: PKGBUILD  hime.install  ignore-lib64.patch  install  makepkg.sh
distro/archlinux/ci/: Dockerfile  entrypoint.sh
distro/centos/ci/centos7/: Dockerfile  entrypoint_centos7.sh
distro/centos/ci/centos8/: Dockerfile  entrypoint_centos8.sh
distro/debian/: changelog  ckqt.sh  control  gen-deb  hime.immodules  install  links  postinst  prerm  rules
distro/debian/HOBA/: COPYING.txt
distro/debian/ci/: Dockerfile  entrypoint.sh
distro/debian/im-config/: 25_hime_upstream.conf  25_hime_upstream.rc
distro/debian/im-switch/: hime
distro/dev-tools/code/: indent.sh
distro/dev-tools/icons/: hime-create-icons.sh  hime.xcf
distro/dev-tools/patches/: rxvt-unicode-9.14.diff
distro/dev-tools/qt3-test/: Makefile  ed3.h  ed3a.cpp
distro/dev-tools/qt4-test/: Makefile  ed4.cpp  ed4.pro
distro/dev-tools/qt5-test/: Makefile  ed5.cpp  ed5.h  ed5.pro  ed5a.cpp
distro/dev-tools/scripts/: make-tarball  test-hime
distro/fedora/: Makefile  gen-rpm  hime-fedora.spec.in  hime.conf
distro/freebsd/: Makefile  pkg-descr  pkg-message
distro/ubuntu/: unity-systray
filter/: Makefile  Makefile.am  arukas  big5only  jp2cn  jp2tw  nobopomofo  sakura  tw2jp  zh2jp  zh2tw
git-hooks/: pre-commit
gtk-im/: Makefile  gtkimcontexthime.c  gtkimcontexthime.h  gtkintl.h  imhime.c
gtk3-im/: Makefile  gtkimcontexthime.h  gtkintl.h
icons/: 30x30  Makefile  Makefile.am  README
icons/dark/: COPYING
icons/gray/: COPYING
icons/kurohime/: COPYING
icons/taylorchu/: COPYING
icons/ziyawu_n_winlin/: COPYING
im-client/: Makefile  hime-im-client.cpp  hime-im-client.h  hime-protocol.h
man/: Makefile  Makefile.am  cin2gtab.1  gtab2cin.1  hime-cin2gtab.1  hime-env.1  hime-exit.1  hime-gb-toggle.1  hime-gtab-merge.1  hime-gtab2cin.1  hime-juyin-learn.1  hime-kbm-toggle.1  hime-message.1  hime-phoa2d.1  hime-phod2a.1  hime-setup.1  hime-sim2trad.1  hime-trad.1  hime-trad2sim.1  hime-ts-edit.1  hime-tsa2d32.1  hime-tsd2a32.1  hime-tslearn.1  hime.1
menu/: Makefile  Makefile.am  hime-setup.desktop
modules/: Makefile  anthy.cpp  chewing-conf.cpp  chewing.cpp  chewing.h  hime-setup-chewing.cpp  intcode.cpp  intcode.h  win-int.cpp
po/: Makefile  Makefile.am  en_US.po  zh_CN.po  zh_TW.po
po/en_US/: hime.po
po/zh_CN/: Makefile  hime.po
qt-im/: Makefile  qhimeinputcontext.h  qhimeinputcontext_x11.cpp  qhimeinputcontextplugin_my.cpp
qt4-im/: Makefile  hime-imcontext-qt.cpp  hime-imcontext-qt.h  hime-qt.cpp  hime-qt.h  im-hime-qt.cpp
scripts/: Makefile  Makefile.am  extract.py  format_code.py  gtab.append_prepare  hime-env  hime-user-setup  html-browser  scan-build.sh  tsin-gtab-edit  tsin-gtab-import  utf8-edit
src/: IC.c  IC.cpp  IC.h  Makefile  Makefile.am  about.c  cache.c  cin2gtab.c  config.h  eggtrayicon.c  eggtrayicon.h  eve.c  fullchar.c  gdkpixbuf-drawable.c  gst.h  gtab-buf.c  gtab-buf.h  gtab-dbg.c  gtab-init.c  gtab-list.c  gtab-list.h  gtab-tsin-fname.c  gtab-use-count.c  gtab-util.c  gtab.c  gtab.cpp  gtab.h  gtab2cin.c  gtk_bug_fix.c  hime-appearance.c  hime-cin2gtab.c  hime-common.c  hime-conf.c  hime-conf.h  hime-crypt.c  hime-endian.h  hime-exec-script.c  hime-exit.c  hime-gb-toggle.c  hime-gtab-merge.c  (+95 more)
src/IMdkit/: Makefile  Makefile.am
src/IMdkit/include/: IMdkit.h  Xi18n.h  XimProto.h
src/IMdkit/lib/: FrameMgr.c  FrameMgr.h  IMConn.c  IMMethod.c  Makefile  Makefile.am  Xi18nX.h  XimFunc.h  i18nAttr.c  i18nClbk.c  i18nIMProto.c  i18nIc.c  i18nMethod.c  i18nPtHdr.c  i18nUtil.c  i18nX.c
src/gtk-im/: Makefile  Makefile.am  config.h  gtkimcontexthime.c  gtkimcontexthime.h  gtkintl.h  imhime.c
src/gtk3-im/: Makefile  Makefile.am  config.h  gtkimcontexthime.c  gtkimcontexthime.h  imhime.c
src/im-client/: Makefile  Makefile.am  hime-im-client-attr.h  hime-im-client.c  hime-im-client.h  hime-protocol.h  hime-send.c
src/libappindicator/: app-indicator-enum-types.h  app-indicator.h
src/modules/: Makefile  Makefile.am  anthy.c  chewing-conf.c  chewing.c  chewing.h  hime-setup-chewing.c  intcode.c  intcode.h  win-int.c
src/qt-im/: Makefile  qhimeinputcontext_x11.cpp  qhimeinputcontextplugin.h
src/qt3-test/: ed3.cpp  ed3.pro
src/qt4-im/: Makefile  hime-common-qt.h  hime-imcontext-qt.cpp  hime-imcontext-qt.h  hime-qt.cpp  hime-qt.h  im-hime-qt.cpp  moc_hime-qt.cpp
src/qt4-test/: ed4.h  ed4a.cpp
src/qt5-im/: Makefile  Makefile.am  hime-imcontext-qt.cpp  hime-imcontext-qt.h  hime-qt.cpp  hime-qt.h
src/qt6-im/: Makefile  Makefile.am  hime-imcontext-qt.cpp  hime-imcontext-qt.h  hime-qt.cpp  hime-qt.h  hime.json
